--- a/src/components/molecules/modals/new-product/styles.module.css
+++ b/src/components/molecules/modals/new-product/styles.module.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
-    grid-template-areas:
+    /* grid-template-areas:
         'name name'
-        'purchase_price sale_price';
+        'purchase_price sale_price'; */
     gap: 20px;
 }
